[gd_scene load_steps=7 format=3 uid="uid://beymjtmt3poy6"]

[ext_resource type="Script" uid="uid://ddminwprtgrbs" path="res://Scenes/GameFiles/Items/ItemDrop.gd" id="1_c2e5g"]
[ext_resource type="Texture2D" uid="uid://dg14kh1xv7olb" path="res://Assets/Resources/Items/Icons/pliers.png" id="2_tvsp8"]

[sub_resource type="Animation" id="Animation_1cst0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e7nhm"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kj2jp"]
_data = {
&"RESET": SubResource("Animation_1cst0"),
&"spin": SubResource("Animation_e7nhm")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_w0ep2"]
size = Vector3(1.5, 1.5, 1.5)

[node name="ItemDrop" type="Node3D"]
script = ExtResource("1_c2e5g")
sprite_billboarding = true
metadata/_custom_type_script = "uid://3bd2uvwvsmek"

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
billboard = 2
texture = ExtResource("2_tvsp8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kj2jp")
}
autoplay = "spin"

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.10352e-05, 0, 0.00390625)
shape = SubResource("BoxShape3D_w0ep2")
debug_color = Color(0.676772, 0.727425, 1.54018e-06, 1)

[connection signal="picked_up" from="." to="." method="_on_picked_up"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
